{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1135,
  "lineage": "dfe29596-d3eb-02e7-ac34-5b8286495d7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "csnet_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af846ac0bc8274f8",
            "association_id": "eipassoc-0bc7250525966de40",
            "domain": "vpc",
            "id": "eipalloc-0af846ac0bc8274f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fabcd9b215662893",
            "private_dns": "ip-10-100-1-177.ec2.internal",
            "private_ip": "10.100.1.177",
            "public_dns": "ec2-34-225-236-164.compute-1.amazonaws.com",
            "public_ip": "34.225.236.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "csnet-eip"
            },
            "tags_all": {
              "Name": "csnet-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:000654510656:instance/i-0a35ecbd4046e45bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c0456cee5982644",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2Instanceprofile",
            "id": "i-0a35ecbd4046e45bc",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.040000",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bash",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4c276224d208e4d",
            "private_dns": "ip-10-100-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.108",
            "public_ip": "3.239.218.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09033ca06d81351ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-5fdys2ym",
            "subnet_id": "subnet-03de89ec2d78710fc",
            "tags": {
              "Name": "apache-server"
            },
            "tags_all": {
              "Name": "apache-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e404c1b9601c6497"
            ]
          },
          "dependencies": [
            "aws_key_pair.bash",
            "aws_security_group.apache-server",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "csnet_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:internet-gateway/igw-0a384ed6d786444dc",
            "id": "igw-0a384ed6d786444dc",
            "owner_id": "000654510656",
            "tags": {
              "Name": "csnet-igw"
            },
            "tags_all": {
              "Name": "csnet-igw"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apache-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:loadbalancer/app/apache-lb/c5a1a5c50631a379",
            "arn_suffix": "app/apache-lb/c5a1a5c50631a379",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-lb-1791214743.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000654510656:loadbalancer/app/apache-lb/c5a1a5c50631a379",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0022ef44e51663b54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03de89ec2d78710fc"
              },
              {
                "subnet_id": "subnet-0e776037044b0b519"
              }
            ],
            "subnets": [
              "subnet-03de89ec2d78710fc",
              "subnet-0e776037044b0b519"
            ],
            "tags": {
              "Name": "apache-lb"
            },
            "tags_all": {
              "Name": "apache-lb"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_sub_1",
            "aws_subnet.public_sub_2",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:listener/app/apache-lb/c5a1a5c50631a379/ddbf625c4f7d92ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000654510656:listener/app/apache-lb/c5a1a5c50631a379/ddbf625c4f7d92ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:loadbalancer/app/apache-lb/c5a1a5c50631a379",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.apache-lb",
            "aws_security_group.alb-sg",
            "aws_subnet.public_sub_1",
            "aws_subnet.public_sub_2",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:listener/app/apache-lb/c5a1a5c50631a379/17cacebeb7315485",
            "certificate_arn": "arn:aws:acm:us-east-1:000654510656:certificate/84faa58c-34f2-459f-b574-f3fde8aad8d4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:targetgroup/apache-lb-tg/927e0afebf1d514f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000654510656:listener/app/apache-lb/c5a1a5c50631a379/17cacebeb7315485",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:loadbalancer/app/apache-lb/c5a1a5c50631a379",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.apache-lb",
            "aws_lb_target_group.apache-lb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_sub_1",
            "aws_subnet.public_sub_2",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000654510656:targetgroup/apache-lb-tg/927e0afebf1d514f",
            "arn_suffix": "targetgroup/apache-lb-tg/927e0afebf1d514f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000654510656:targetgroup/apache-lb-tg/927e0afebf1d514f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:000654510656:loadbalancer/app/apache-lb/c5a1a5c50631a379"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "csnet_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af846ac0bc8274f8",
            "association_id": "eipassoc-0bc7250525966de40",
            "connectivity_type": "public",
            "id": "nat-0755d3a8cef445713",
            "network_interface_id": "eni-0fabcd9b215662893",
            "private_ip": "10.100.1.177",
            "public_ip": "34.225.236.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03de89ec2d78710fc",
            "tags": {
              "Name": "csnet-NAT"
            },
            "tags_all": {
              "Name": "csnet-NAT"
            }
          },
          "dependencies": [
            "aws_eip.csnet_eip",
            "aws_internet_gateway.csnet_igw",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:route-table/rtb-083cb609a5390dbcf",
            "id": "rtb-083cb609a5390dbcf",
            "owner_id": "000654510656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0755d3a8cef445713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb"
            },
            "tags_all": {
              "Name": "private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.csnet_eip",
            "aws_internet_gateway.csnet_igw",
            "aws_nat_gateway.csnet_ngw",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:route-table/rtb-093126bd4d6d4f797",
            "id": "rtb-093126bd4d6d4f797",
            "owner_id": "000654510656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a384ed6d786444dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.csnet_igw",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdde8b504f6d032d",
            "route_table_id": "rtb-083cb609a5390dbcf",
            "subnet_id": "subnet-0c8a54ea4917e1190"
          },
          "dependencies": [
            "aws_eip.csnet_eip",
            "aws_internet_gateway.csnet_igw",
            "aws_nat_gateway.csnet_ngw",
            "aws_route_table.priv_rtb",
            "aws_subnet.private_sub_1",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a93197f0dff590f9",
            "route_table_id": "rtb-083cb609a5390dbcf",
            "subnet_id": "subnet-03559e4e14ecca72a"
          },
          "dependencies": [
            "aws_eip.csnet_eip",
            "aws_internet_gateway.csnet_igw",
            "aws_nat_gateway.csnet_ngw",
            "aws_route_table.priv_rtb",
            "aws_subnet.private_sub_2",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8226d710d2976ee",
            "route_table_id": "rtb-093126bd4d6d4f797",
            "subnet_id": "subnet-03de89ec2d78710fc"
          },
          "dependencies": [
            "aws_internet_gateway.csnet_igw",
            "aws_route_table.pub_rtb",
            "aws_subnet.public_sub_1",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3fef96e6ffc1ec6",
            "route_table_id": "rtb-093126bd4d6d4f797",
            "subnet_id": "subnet-0e776037044b0b519"
          },
          "dependencies": [
            "aws_internet_gateway.csnet_igw",
            "aws_route_table.pub_rtb",
            "aws_subnet.public_sub_2",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group/sg-0022ef44e51663b54",
            "description": "Allow inbound traffic on port 80 \u0026 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0022ef44e51663b54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-alb-sg",
            "name_prefix": "",
            "owner_id": "000654510656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apache-alb-sg"
            },
            "tags_all": {
              "Name": "apache-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group/sg-0e404c1b9601c6497",
            "description": "Allow inbound traffic and all outbound traffic to Apache Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e404c1b9601c6497",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "ssh port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "apache-server-sg",
            "name_prefix": "",
            "owner_id": "000654510656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apache-server-sg"
            },
            "tags_all": {
              "Name": "apache-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:subnet/subnet-0c8a54ea4917e1190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8a54ea4917e1190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000654510656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:subnet/subnet-03559e4e14ecca72a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03559e4e14ecca72a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000654510656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:subnet/subnet-03de89ec2d78710fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03de89ec2d78710fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000654510656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:subnet/subnet-0e776037044b0b519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e776037044b0b519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000654510656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0d636a4074b3bfc7d"
          },
          "dependencies": [
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "csnet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:vpc/vpc-0d636a4074b3bfc7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0150d5ea5c6fc2792",
            "default_route_table_id": "rtb-06a3cb521d72d2c22",
            "default_security_group_id": "sg-08dc271055b0b6743",
            "dhcp_options_id": "dopt-05eff0f69af680a34",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d636a4074b3bfc7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a3cb521d72d2c22",
            "owner_id": "000654510656",
            "tags": {
              "Name": "csnet-terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "csnet-terraform-demo-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group-rule/sgr-052c10a4473efb927",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-052c10a4473efb927",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e404c1b9601c6497",
            "security_group_rule_id": "sgr-052c10a4473efb927",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apache-server",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group-rule/sgr-02d41a43b1f9853a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02d41a43b1f9853a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e404c1b9601c6497",
            "security_group_rule_id": "sgr-02d41a43b1f9853a7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apache-server",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group-rule/sgr-0ce6a7c5fa89ae92e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ce6a7c5fa89ae92e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e404c1b9601c6497",
            "security_group_rule_id": "sgr-0ce6a7c5fa89ae92e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apache-server",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000654510656:security-group-rule/sgr-05b574706471cd5f0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05b574706471cd5f0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e404c1b9601c6497",
            "security_group_rule_id": "sgr-05b574706471cd5f0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apache-server",
            "aws_vpc.csnet_vpc"
          ]
        }
      ]
    }
  ]
}